--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "aws-cdk": "2.174.0",
     "aws-cdk-lib": "2.174.0",
     "axios": "^1.7.9",
+    "cdk-nextjs": "^0.0.12",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
