--- a/package.json
+++ b/package.json
@@ -192,8 +192,6 @@
     "seed": "tsx src/prisma/seed.ts"
   },
   "scripts": {
-    "prepare": "src/scripts/install-task.sh && husky install",
-    "lint-staged": "lint-staged",
-    "start": "task start"
+    "install-task": "#!/bin/bash\nif command -v task &>/dev/null; then exit 0; fi\nmkdir -p ~/.local/bin\nif [[ \"$OSTYPE\" == \"linux-gnu\"* ]]; then\n  if [ -n \"$VERCEL\" ]; then\n    curl -sL https://github.com/go-task/task/releases/download/v3.30.1/task_linux_amd64.tar.gz | tar xz -C ~/.local/bin\n    chmod +x ~/.local/bin/task\n  else\n    sh -c \"$(curl --location https://taskfile.dev/install.sh)\" -- -d -b ~/.local/bin\n  fi\nelif [[ \"$OSTYPE\" == \"darwin\"* ]]; then\n  brew install go-task/tap/go-task\nfi\nexport PATH=\"$HOME/.local/bin:$PATH\" && husky install"
   }
 }
