--- a/package.json
+++ b/package.json
@@ -193,6 +193,6 @@
   },
   "scripts": {
     "prepare": "pnpm install-task",
-    "postinstall": "#!/bin/bash\nif command -v task &>/dev/null; then exit 0; fi\nmkdir -p /root/.local/bin\nif [[ \"$OSTYPE\" == \"linux-gnu\"* ]]; then\n  curl -sL https://github.com/go-task/task/releases/download/v3.30.1/task_linux_amd64.tar.gz | tar xz -C /root/.local/bin\n  chmod +x /root/.local/bin/task\nelif [[ \"$OSTYPE\" == \"darwin\"* ]]; then\n  brew install go-task/tap/go-task\nfi\nexport PATH=\"/root/.local/bin:$PATH\" && husky install"
+    "postinstall": "#!/bin/bash\necho \"OSTYPE=$OSTYPE\"\nif command -v task &>/dev/null; then exit 0; fi\nmkdir -p /root/.local/bin\nif [[ \"$OSTYPE\" == \"linux-gnu\"* ]]; then\n  curl -sL https://github.com/go-task/task/releases/download/v3.30.1/task_linux_amd64.tar.gz | tar xz -C /root/.local/bin\n  chmod +x /root/.local/bin/task\nelif [[ \"$OSTYPE\" == \"darwin\"* ]]; then\n  brew install go-task/tap/go-task\nfi\nexport PATH=\"/root/.local/bin:$PATH\" && husky install"
   }
 }
