--- a/src/docker/Dockerfile.playwright
+++ b/src/docker/Dockerfile.playwright
@@ -14,6 +14,7 @@ RUN pnpm config set store-dir /home/node/.pnpm-store \
 # Setup environment variables
 ENV DOCKER_CONTAINER=1
 ENV NODE_OPTIONS=--no-warnings
+ENV PATH="/root/.local/bin:${PATH}"
 
 # Fetch dependencies first (caching based solely on pnpm-lock.yaml)
 COPY pnpm-lock.yaml ./
