refactor: consolidate e2e testing setup
- Remove redundant Dockerfile.e2e\n- Install task in Dockerfile.playwright\n- Update docker-compose command for e2e tests

--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -262,7 +262,11 @@ services:
     dns:
       - 8.8.8.8
       - 8.8.4.4
-    command: task playwright:test
+    command: |
+      sh -c "
+        pnpm postinstall
+        task test:e2e:ci
+      "
 
   storybook-test:
     profiles: ['e2e']
