--- a/src/docker/Dockerfile.playwright
+++ b/src/docker/Dockerfile.playwright
@@ -12,6 +12,8 @@ RUN pnpm config set store-dir /home/node/.pnpm-store \
   && pnpm config set node-deprecation-warnings false
 ENV NODE_OPTIONS=--no-warnings
 
+RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
+
 # Fetch dependencies first (caching based solely on pnpm-lock.yaml)
 COPY pnpm-lock.yaml ./
 RUN --mount=type=cache,target=/home/node/.pnpm-store pnpm fetch
