--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   nginx:
-    container_name: nginx
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_nginx
     image: nginx:alpine
     ports:
       - '443:443'
@@ -34,7 +34,7 @@ services:
       driver: 'none'
 
   app_dev:
-    container_name: app_dev
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_app_dev
     build:
       context: ../..
       dockerfile: src/docker/Dockerfile.dev
@@ -94,7 +94,7 @@ services:
         max-file: '3'
 
   app_prod:
-    container_name: app_prod
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_app_prod
     build:
       context: ../..
       dockerfile: src/docker/Dockerfile.prod
@@ -148,7 +148,7 @@ services:
       start_interval: 1s
 
   db_dev:
-    container_name: db_dev
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_db_dev
     image: postgres:16.6
     expose:
       - '5432'
@@ -189,7 +189,7 @@ services:
       - apadana_network
 
   db_test:
-    container_name: db_test
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_db_test
     image: postgres:16.6
     environment:
       POSTGRES_USER: postgres
@@ -209,7 +209,7 @@ services:
     stop_grace_period: 1m
 
   redis:
-    container_name: redis
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_redis
     image: redis:7-alpine
     expose:
       - '6379'
@@ -226,7 +226,7 @@ services:
 
   playwright:
     profiles: ['e2e']
-    container_name: playwright
+    container_name: ${COMPOSE_PROJECT_NAME:-apadana}_playwright
     build:
       context: ../..
       dockerfile: src/docker/Dockerfile.playwright
@@ -312,18 +312,28 @@ services:
 networks:
   apadana_network:
     driver: bridge
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_network
 
 volumes:
   dev_node_modules:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_dev_node_modules
   pnpm_store:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_pnpm_store
   next_cache:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_next_cache
   postgres_data_dev:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_postgres_data_dev
   postgres_data_prod:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_postgres_data_prod
   buildx_cache:
   redis_data:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_redis_data
   prod_node_modules:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_prod_node_modules
   prod_pnpm_store:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_prod_pnpm_store
   prod_next_cache:
+    name: ${COMPOSE_PROJECT_NAME:-apadana}_prod_next_cache
   playwright_node_modules:
   playwright_results:
   storybook_test_node_modules:
