--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -3,9 +3,7 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME:-apadana}_nginx
     image: nginx:alpine
     ports:
-      # if the project name is apadana, then map 443 to 443.
-      # For other projects like ci, it should not map ports
-      - ${COMPOSE_PROJECT_NAME:-apadana} == "apadana" && "443:443"
+      - '${NGINX_PORT:-}'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certs:/etc/nginx/certs:ro
